github pages images not showing fix

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: url(/background/background.jpg) no-repeat center;
+  background: url(background/background.jpg) no-repeat center;
   background-size: cover;
 }
 
